...
                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <subviews>
                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="l3e-UH-zHC">
                                    <rect key="frame" x="325" y="10" width="30" height="30"/>
                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <accessibility key="accessibilityConfiguration" label="favoriteImage">
                                        <accessibilityTraits key="traits" button="YES"/>
                                        <bool key="isElement" value="YES"/>
                                    </accessibility>
                                    <constraints>
                                        <constraint firstAttribute="width" constant="30" id="9pz-Z6-uav"/>
                                        <constraint firstAttribute="height" constant="30" id="jiO-j6-baX"/>
...
            </objects>
            <point key="canvasLocation" x="15" y="697"/>
        </scene>
        <!--Premium-->
        <scene sceneID="LsW-d8-bIn">
            <objects>
                <viewController storyboardIdentifier="Premium" id="6ap-3I-RR7" customClass="PremiumViewController" customModule="Lahimmat_Lahdot" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="OO0-VO-Tj8"/>
                        <viewControllerLayoutGuide type="bottom" id="OEx-Wp-AuK"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="v9h-Ty-pzd">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
            <point key="canvasLocation" x="1028" y="-1028"/>
        </scene>
        <!--Favourites-->
        <scene sceneID="OP8-dJ-ySS">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mS4-bc-wno" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Favourites" image="ic_favorite" id="j8t-rR-QMs"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="COc-oV-FvD">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
