...
        let alert = UIAlertController(
            title: NSLocalizedString("PURCHASE_FAILED_TITLE", comment: ""),
            message: message == nil
                ? NSLocalizedString("PURCHASE_FAILED_MESSAGE", comment: "")
                : message,
            preferredStyle: UIAlertController.Style.alert)
        alert.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.default, handler: nil))
        self.present(alert, animated: true, completion: nil)
    }

    private func setPremiumUI() {
        self.switchToNearestStopsTab()
        self.hideNearestStopsAdBanner()
...
            stopsTableViewController.banner = nil
        }
    }

    override func viewDidLoad() {
        loadingIndicator = LoadingIndicator(frame: CGRect(x: 0, y: 0, width: 40, height: 40))
        loadingIndicator?.accessibilityIdentifier = "premium loading indicator"
        if (loadingIndicator != nil) {
            purchaseStatusIndicator.addSubview(loadingIndicator!)
        }
        loadingIndicator?.isHidden = true
        buyButton.setTitle(NSLocalizedString("PREMIUM_BUTTON_TEXT", comment: ""), for: .normal)
        PremiumTextLabel.text = NSLocalizedString("PREMIUM_LABEL_TEXT", comment: "")
...
