...
            banner?.delegate = self
            banner?.adUnitID = "ca-app-pub-3940256099942544/2934735716" // SAMPLE
            banner?.rootViewController = self
            banner?.backgroundColor = UIColor.gray
            let request = GADRequest()
            request.testDevices = [ kGADSimulatorID ];
            banner?.accessibilityIdentifier = "next departures ad banner"
            banner?.load(request)
        }
    }

    override func tableView(_ tableView: UITableView, viewForHeaderInSection section: Int) -> UIView? {
        return banner
...
